# BTD6bot

./: .gitattributes  .gitignore  Logs.txt  Plans.md  README.md  pyproject.toml  requirements.txt  run-ng.bat  run.bat
.github/workflows/: ci.yml  help_imgs.yml  help_readme.yml  plans.yml  ruff.yml  update.yml
_install/: INSTALL.md
_install/other/: install.sh
_install/win/: install.bat
btd6bot/: __init__.py  __main__.py  _commands_doctest.py  _no_gui.py  customprint.py  main.py  set_plan.py
btd6bot/Files/: _ocr_upgradedata.json  bot_vars.json  costs.json  custom_locations.json  gui_vars.json  income.json  ocr_upgrade_data.json  time_data-backup.json  time_data.json  times_temp.txt  upgrades_current.json
btd6bot/_ocr_tests/: __init__.py  _commands_doctest.py  _geraldo_test.py  _upgrade_deltas.py
btd6bot/bot/: __init__.py  _adjust_deltas.py  _farming.py  _maindata.py  bot_data.py  bot_vars.py  hotkeys.py  kb_mouse.py  locations.py  menu_return.py  menu_start.py  rounds.py  times.py
btd6bot/gui/: __init__.py  gui_paths.py  gui_tools.py  guihotkeys.py  help_window.py  hotkey_window.py  main_window.py  monitoring_window.py  queue_window.py  settings_window.py
btd6bot/plans/: #ouchEasyStandard.py  #ouchHardAlternate.py  #ouchHardChimps.py  __init__.py  _plan_imports.py  adora's_templeHardChimps.py  alpine_runHardChimps.py  (+115 more)
docs/: Plans.md  adding content.txt  gui ascii art.txt  plan cheatsheet.txt
plan template/: plan_template.py
plan_template/: map_nameDifficultyMode.py
scripts/: update_helpwindow_imgs.py  update_helpwindow_readme.py  update_plans.py
(+95 files in other folders)
