[project]
requires-python = ">=3.12"

# Pytest
[tool.pytest.ini_options]
pythonpath = ["btd6bot"]
addopts = [
    "--import-mode=importlib"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore: The argument 'device' of Tensor.is_pinned\\(\\) is deprecated:DeprecationWarning",
]

# Mypy
[tool.mypy]
files = ["btd6bot"]
exclude = [
    "^btd6bot/_ocr_tests/",
    "^btd6bot/plans/",
]
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = [
    "btd6bot/bot/commands/monkey.*"
    ]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "btd6bot/gui/roundplot.*"
]
disable_error_code = ["operator", "assignment"]


# Ruff
[tool.ruff]
exclude = [
    "docs",
    "btd6bot/plans",
    "btd6bot/_ocr_tests"
]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"set_plan.py" = ["F401"]
"_no_gui.py" = ["F401"]
"btd6bot/gui/main_window.py" = ["F401"]